--- a/cyb-100/triage/triage.properties.template
+++ b/cyb-100/triage/triage.properties.template
@@ -32,7 +32,7 @@ kafka.group.id=BRANCH.cyb-100.triage
 
 topic.input=BRANCH.cyb-100.triage.input
 topic.output=BRANCH.cyb-100.triage.output
-enrichment.topic.input=BRANCH.cyb-444.enrichments.input
+§.topic.input=main.cyb-444.enrichments.input
 enrichment.topic.query.output=BRANCH.cyb-100.enrichments.output
 query.input.topic=BRANCH.cyb-444.scoring.input
 query.output.topic=BRANCH.cyb-100.scoring.output
